2025-07-03 ------------------------------------------------------------------------------------------------------------
1 developed a sorf of mutex locker as a new DFLocker class and wrapped all i/o ops of the DFWSPacketHandler classes
    with it to prevent certain state conditions that could cause inconsistent data otherwise

2025-07-01 ------------------------------------------------------------------------------------------------------------
1 have the basics of a websocket handler working now,  right now it's just absolute basic send/receive but it does
    establish a client-srv ID pairing and allow messaging back and forth
2025-06-30 ------------------------------------------------------------------------------------------------------------
1 new branch classing/DFWSSPacketHandler
1 created new classes DFWebSocketClient and DFWebSocketServer as I intend to remove the .send, .sendWait, and .sendExpect
    handlers and make a single sendPkt handler that can do all of the above and also supports sending chunks

 2025-06-28 ------------------------------------------------------------------------------------------------------------
1 Finally have most conversions to the new backend/frontend handling finished, final step of export/import documents
    is all that really remains now.
1 Finished doc-level export-to-file and reworked it in such a way that it should work as a cut/copy/paste handler too

2 merged rework/0.2.0 back into main as at this point all that's left to fixup is import and that's noncritical

 2025-06-26 ------------------------------------------------------------------------------------------------------------
1 modded autoSave slightly so it now releases immediately no matter what (by wrapping _process in setTimeout())
1 DelDoc is now fully working as an autoSave() op
1 cleaned up a few things about packets, mostly document work
1 added Fault() handler so any packets sent FtoB will now open an error dialog even if not waited for
